<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Rick and Morty</string>
    <string name="tap">Tap on Screen to Continue\n</string>
    <string name="confirmarSalida">Press Again to Exit…</string>
    <string name="personaje">Personaje:</string>
    <string name="status">Status:"</string>
    <string name="species">Species:"</string>
    <string name="type">Type:"</string>
    <string name="gender">Gender:"</string>
    <string name="created">Created:"</string>
    <string name="available" translatable="false">No Available</string>
    <string name="content" translatable="false">TODO"</string>
</resources>
