<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/fotoImageView"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/content" />

    <TextView
        android:id="@+id/nombreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/status"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/speciesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/species"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/type"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/gender"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/createdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/created"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@android:drawable/ic_menu_revert"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="buttomBack"
        android:paddingVertical="40dp"
        android:visibility="visible" />

</LinearLayout>